samples/_failures_safe/1761329141_7c63f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_484d9b37.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_484d9b37.c:167:5: error: ‘lexer_skip_wh’ undeclared (first use in this function)
  167 |     lexer_skip_wh
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_484d9b37.c:167:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_484d9b37.c:167:18: error: expected ‘;’ at end of input
  167 |     lexer_skip_wh
      |                  ^
      |                  ;
./samples/SAFE/__tmp_484d9b37.c:167:5: error: expected declaration or statement at end of input
  167 |     lexer_skip_wh
      |     ^~~~~~~~~~~~~
